# BigSMILES

./: 404.html  LICENSE.txt  MANIFEST.in  README.md  index.html  log.md  mkdocs.yml  objects.inv  pyproject.toml  requirements_dev.txt  requirements_optional.txt  setup.cfg
.github/workflows/: build-docs.yml  tests.yml
bigsmiles/examples/: index.html
bigsmiles/overview/: index.html
bigsmiles/references/: index.html
bigsmiles/specification/: index.html
bigsmiles/stereochemistry/: index.html
developers/developers/: index.html
docs/: README.md  index.md
docs/bigsmiles/: interpretation.md  main.md  overview.md  priority_rules.md  references.md  smiles_specification.md  specification.md
docs/developers/: developers.md
docs/extras/: change_log.md  license.md
docs/quickstart/: distributions.md  installation.md  overview.md  quickstart.md  tokenizing.md
docs/reference/: configuration.md  errors.md  overview.md
docs/stylesheets/: extra.css
docs/tutorials/: tutorials.md
examples/: _development.py  _nathan_code.py  distributions.py  example.py  example_distributions.py  example_extension.py  example_rxn.py  reaction.py  simple.py  tokenization.py
examples/data/: GPC_data.csv
examples/random_stuff/: _nathan_code.py  distributions.py  example.py  example_rxn.py  gernating.py  stuff.py
extras/change_log/: index.html
extras/license/: index.html
quickstart/overview/: index.html
quickstart/quickstart/: index.html
quickstart/tokenizing/: index.html
reference/configuration/: index.html
search/: search_index.json
tests/: README.md  main.py
(+129 files in other folders)
