[metadata]
name = bigsmiles
version = 0.0.7
description = BigSMILES Parser
long_description = file: README.md
long_description_content_type = text/markdown
author = Dylan Walsh
url = https://github.com/dylanwal/bigsmiles
license = BSD
license_files = LICENSE.txt
platforms = any
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7

[options]
packages =
    bigsmiles
package_dir =
    =src
python_requires = >=3.7
zip_safe = no
include_package_data = true
